--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
   --color-green-primary: var(--green-primary);
-  --color-primary: var(--primary);
+  --color-primary: #102822;
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
